app/assets/stylesheets/home.scss
@font-face {
  /*
  make fonts folder in assets
  rake assets:precompile
  inside Application class of application.rb -> config.assets.paths << Rails.root.join("app", "assets", "fonts")
  must have a scss file to use font-url
  yarn add --dev webpack webpack-dev-server
    */
  font-family: 'Raleway-Bold';
  src: font-url('raleway/Raleway-Bold.ttf');
  font-weight: normal;
  font-style: normal;
}

h1 {
  padding-left: 10px;
}
h3.header {
  display: block;
  font-size: 30pt;
  margin: 5px 0px;
  font-family: 'Raleway-Bold';
  text-align: center;
}
.header:after {
    content: ""; /* This is necessary for the pseudo element to work. */
    display: block; /* This will put the pseudo element on its own line. */
    margin: 0 auto; /* This will center the border. */
    width: 10%; /* Change this to whatever width you want. */
    padding-top: 15px; /* This creates some space between the element and the border. */
    border-bottom: 3pt solid gray; /* This creates the border. Replace black with whatever color you want. */
}
.note {
    padding-left: 10px;
    font-size: 10px;
}

.profile_container {
  padding: 10px;
  max-height: 390px;
  max-width: 292px;
  border-style: solid;
  display: inline-block;
  float: left;
}

.profile_container img {
  margin-bottom: 5px;
  display: block;
}
.profile_contact {
  font-size: 15px;
}

.profile_description {
  font-size: 17px;
  display: initial;
}

.info_container {
 width: auto;
 height: -webkit-fill-available;

 padding: 10px 10px;
 overflow: hidden;
 float: none;
}

.flex {
  display: flex;
  flex-direction: row;
}

.flex_container {
  display: flex;
  flex-direction: column;
  width: -webkit-fill-available;
}

.description_header {
  font-size: 18pt;
  padding-top: 5px;
  padding-bottom: 10px;
  text-align: center;
  font-family: 'Raleway-Bold'
}
.set {
  font-size: 15px;
}
.more {
  display: none;
}

.info {
  height: auto;
  display: flex;
  flex-direction: column;

}
.info img {
  height: 250px;
  max-width: 100%;
  margin-bottom: 5px;
}

.description {
  text-align: center;
  font-size: 12pt;
  margin-bottom: 5px;
  font-family: 'Raleway-ExtraLight';
}
.top_container {
  background-color: #F0EBD8;
  overflow: hidden;
  width: -webkit-fill-available;
  height: -webkit-fill-available;
}

